package Decorator;

public interface ServicioDelivery {

    double calcularCosto();

    String obtenerDescripcion();
}